Updated and corrected all responsive spacing and alignment

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     background-color: #2687cb;
     padding-top: 7px;
     padding-bottom: 7px;
+    padding-inline: 7px;
     display: inline-flexbox;
     white-space: nowrap;
     justify-content: end;
@@ -48,6 +49,14 @@ body {
     padding-right: 10px;
 }
 
+.center-text {
+    text-align: justify;
+}
+
+.center-content {
+    padding: 0px 10% 0px 10%;
+}
+
 
 /* .nav-link {
     color: #2687cb;
@@ -63,7 +72,7 @@ body {
 
 .title-bar {
     background-color: #2687cb;
-    padding: 15px;
+    padding-inline: 10%;
     margin: auto;
 }
 
@@ -84,6 +93,21 @@ body {
     color: #fcde34;
     align-items: center;
     font-size: 20px;
+    padding: 48px 10% 48px 10%;
+    line-height: 2.2em;
+}
+
+.bullet-text-left {
+    color: #fcde34;
+    align-items: center;
+    font-size: 20px;
+    /* padding: 48px 10% 48px 10%; */
+    line-height: 2.2em;
+}
+
+.footer-custom{
+    padding: 20px;
+
 }
 
 .contact-form-h4 {
@@ -93,7 +117,12 @@ body {
 .footer-p {
     color: white;
     display: inline-block;
-    font-size: smaller;
+    font-size: small;
+}
+
+.footer-link {
+    color: white;
+    font-style: none;
 }
 
 .btn-submit {
@@ -112,8 +141,17 @@ body {
     .header-text {
         font-size: 15px;
 
-}
+    }
 
+    .left-content {
+    text-align: left;
+    padding-left: 10%;
+    }
+    .left-content-right {
+        text-align: left;
+        padding-inline: 5%;
+        }
+}
 /* Large - Less than 992px */
 @media  (max-width: 992px) {
     .top-header {
@@ -129,6 +167,15 @@ body {
     .header-text {
         font-size: 15px;
     }
+
+    .left-content {
+        text-align: left;
+        padding-left: 10%;
+    }
+    .left-content-right {
+        text-align: left;
+        padding-inline: 10%;
+        }
 }
 
 /* Medium - Less than 768px */
@@ -148,6 +195,8 @@ body {
     .header-text {
         font-size: 15px;
 }
+}
+
 
 /* Small - Less than 576px */
 @media (max-width: 576px) {
@@ -162,12 +211,26 @@ body {
         
     }
 
+    /* .body {
+        margin: 0;
+        padding: 0;
+    } */
+
     .header-text {
         font-size: 15px;
-}
+    }
+
+    .bullet-text {
+        padding: 0px;
+    }
+    
+    /* .mobile-left {
+        padding: 0px;
+        flex-direction: none;
+    } */
 
 @media (max-width: 200px) {
 
 }
-
+}
 
